--- a/css/recuperarSenha.css
+++ b/css/recuperarSenha.css
@@ -8,7 +8,6 @@
 
 body {
     background-color: #372775;
-
 }
 
 header {
@@ -16,68 +15,67 @@ header {
     width: 100%;
     display: flex;
     align-items: center;
-    padding: 1rem 0rem 4rem 2rem;
-    font-size: 1.8rem;
-}
-
-header span{
+    padding: 1rem 0rem 3.5rem 2rem;
     font-size: 3rem;
 }
 
 input {
-    height: 3.5em;
+    height: 3em;
+    font-size: 1rem;
     padding: 1rem;
     color: #3F92C5;
 }
 
 button {
-    padding: .6rem 2.5rem;
+    margin-top: 1.5rem;
+    padding: .6rem 2rem;
     font-size: 1.3rem;
     border-radius: .5rem;
     background-color: #37BD6D;
     border: none;
 }
 
-#login-title {
-    text-align: center;
-    padding-bottom: 4rem;
-    font-size: 1.8rem;
+.recuperar {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin-top: 3.5rem;
 }
 
 .container {
     border: 1px solid #737373;
     border-radius: 3%;
     width: 40%;
-    height: 540px;
-    /* margin-top: 1.5rem; */
+    height: 450px;
+    margin-top: 2rem;
     margin-left: auto;
     margin-right: auto;
     padding: 30px;
 }
 
-.material-symbols-outlined {
-font-variation-settings:
-'FILL' 0,
-'wght' 400,
-'GRAD' 0,
-'opsz' 40
-}
-
-.inputs {
+.title {
     display: flex;
     flex-direction: column;
-    font-size: 1.7rem;
-    gap: .20rem;
+    align-items: center;
+    font-size: 1.2rem;
+    padding-top: 0.5rem;
+    padding-bottom: 5rem;
 }
 
-.inputs:first-child {
-    margin-bottom: 1rem;
+.redefinir-senha{
+    font-size: 1.7rem;
+}
+
+.input {
+    display: flex;
+    flex-direction: column;
+    font-size: 1.6rem;
+    gap: .20rem;
+
 }
 
 .error {
-    margin-top: .3rem;
-    display: flex;
-    justify-content: space-between;
+    padding-top: .4rem;
     font-size: 1.1rem;
 }
 
@@ -85,23 +83,15 @@ font-variation-settings:
     color: #FD7979;
 }
 
-.error a {
-    text-decoration: none;
-    color: #3F92C5;
-    font-size: 1.25rem;
-}
-.entrar {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 7rem;
-    
-}
-.entrar a {
-    font-size: 1.4rem;
-    color: #3F92C5;
-}
+.material-symbols-outlined {
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 40
+    }
 
 .large {
-    font-size: 36pt;
+    font-size: 40pt;
     padding-right: 5px;
 }
