--- a/css/index.css
+++ b/css/index.css
@@ -25,8 +25,9 @@ header span{
 }
 
 input {
-    height: 3.5em;
+    height: 3em;
     padding: 1rem;
+    font-size: 1rem;
     color: #3F92C5;
 }
 
