elaboração da página "acoespesquisa" e atualização do head das páginas "index", "recuperarsenha" e "agradecimentos".

--- a/css/agradecimento.css
+++ b/css/agradecimento.css
@@ -25,17 +25,16 @@ div {
     display: flex;
     flex-direction: column;
     text-align: center;
-    padding-top: 4rem;
+    padding-top: 5rem;
     color: white;
 }
 
-div:first-child {
+div span:first-child {
     padding-bottom: 3rem;
 }
 
 div span{
     font-size: 4rem;
-    padding-bottom: 3rem;
 }
 
 footer{
