--- a/css/index.css
+++ b/css/index.css
@@ -17,10 +17,15 @@ header {
     display: flex;
     align-items: center;
     padding: 1rem 0rem 4rem 2rem;
-    font-size: 1.8rem;
 }
 
 header span{
+    font-size: 3rem;
+    padding-right: 5px;
+}
+
+.logo span{
+    padding-top: 0.2em;
     font-size: 3rem;
 }
 
@@ -32,11 +37,12 @@ input {
 }
 
 button {
-    padding: .6rem 2.5rem;
+    padding: .6rem 2.6rem;
     font-size: 1.3rem;
     border-radius: .5rem;
     background-color: #37BD6D;
     border: none;
+    cursor: pointer;
 }
 
 #login-title {
@@ -54,14 +60,6 @@ button {
     margin-left: auto;
     margin-right: auto;
     padding: 30px;
-}
-
-.material-symbols-outlined {
-font-variation-settings:
-'FILL' 0,
-'wght' 400,
-'GRAD' 0,
-'opsz' 40
 }
 
 .inputs {
@@ -100,9 +98,4 @@ font-variation-settings:
 .entrar a {
     font-size: 1.4rem;
     color: #3F92C5;
-}
-
-.large {
-    font-size: 36pt;
-    padding-right: 5px;
 }
