--- a/css/recuperarSenha.css
+++ b/css/recuperarSenha.css
@@ -20,19 +20,26 @@ header {
 }
 
 input {
-    height: 3em;
+    height: 3rem;
     font-size: 1rem;
     padding: 1rem;
     color: #3F92C5;
 }
 
-button {
+.recuperar a {
     margin-top: 1.5rem;
     padding: .6rem 2rem;
     font-size: 1.3rem;
     border-radius: .5rem;
     background-color: #37BD6D;
     border: none;
+    text-decoration: none;
+}
+
+.logo span{
+    padding-top: 0.3rem;
+    padding-right: 5px;
+    font-size: 3rem;
 }
 
 .recuperar {
@@ -81,17 +88,4 @@ button {
 
 .error span {
     color: #FD7979;
-}
-
-.material-symbols-outlined {
-    font-variation-settings:
-    'FILL' 0,
-    'wght' 400,
-    'GRAD' 0,
-    'opsz' 40
-    }
-
-.large {
-    font-size: 40pt;
-    padding-right: 5px;
 }
