--- a/css/modificarPesquisa.css
+++ b/css/modificarPesquisa.css
@@ -34,17 +34,13 @@ header {
 
 .link {
     padding-top: .75em;
+    display: flex;
 }
 
 .link a {
     padding-right: 1.5rem;
     font-size: 1.5em;
     color: #3F92C5;
-}
-
-.link-apagar p {
-    font-size: 18px;
-    color: #F57F7F;
 }
 
 .icones span {
@@ -138,7 +134,6 @@ input[type="file"] {
     display: none;
 }
 
-
 .button {
     display: flex;
     width: 30%;
@@ -185,10 +180,39 @@ input[type="file"] {
     color: #3F92C5;
 }
 
-.nova-Pesquisa:link,
-.nova-Pesquisa:visited,
-.nova-Pesquisa:hover,
-.nova-Pesquisa:active {
+.link-apagar {
+    display: flex;
+    flex-direction: column;
+    margin-right: 1.5rem;
+    width: 24px;
+    height: 26px;
+}
+
+#apagar {
+    align-self: center;
+}
+
+#apagar .button-apagar {
+    color: #F57F7F;
+    font-size: 16px;
+    text-align: center;
+
+}
+
+.button-apagar:link,
+.button-apagar:visited,
+.button-apagar:hover,
+.button-apagar:active {
     text-decoration: none;
     color: inherit;
+}
+
+.link-apagar .img-apagar img {
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 0px;
+}
+
+#apagar a {
+    padding-right: 0px;
 }
